--- a/config/default.yaml
+++ b/config/default.yaml
@@ -25,6 +25,7 @@ PVList:
 signInclude: []
 signExclude: []
 #AI配置
-aiInclude: []
-apiKey: ''
+aiInclude: [] # 对话群聊
+chatLong: 50 # 对话长度
+apiKey: '' # 前去 https://platform.deepseek.com/ 购买api-key
 baseURL: 'https://api.deepseek.com'
