--- a/config/default.yaml
+++ b/config/default.yaml
@@ -27,5 +27,6 @@ signExclude: []
 #AI配置
 aiInclude: [] # 对话群聊
 chatLong: 50 # 对话长度
+temperature: 1.3
 apiKey: '' # 前去 https://platform.deepseek.com/ 购买api-key
 baseURL: 'https://api.deepseek.com'
