--- a/config/help.yaml
+++ b/config/help.yaml
@@ -3,10 +3,10 @@ helpGroup:
 - "group": "图鉴"
   "list":
   - "title": "$角色图鉴"
-    "icon": "tex_hero_head_big_101003.png"
+    "icon": "tex_icon_hero_m_default.png"
     "desc": "查询所有角色图鉴"
-  - "icon": "tex_icon_petegg_vegechickenegg.png"
-    "title": "$奇波图鉴"
+  - "title": "$奇波图鉴"
+    "icon": "tex_icon_taskitem_doll.png"
     "desc": "查询所有奇波图鉴"
   - "title": "$装备图鉴"
     "desc": "查看所有装备"
@@ -22,63 +22,68 @@ helpGroup:
     "icon": "tex_icon_item_meat04.png"
 - "group": "角色"
   "list":
-  - "icon": "tex_icon_skill_104001_05.png"
-    "title": "$寒悠悠技能"
+  - "title": "$寒悠悠技能"
+    "icon": "tex_icon_skill_104001_05.png"
     "desc": "查看角色技能"
-  - "icon": "tex_icon_item_gift_mat_55.png"
-    "title": "$寒悠悠星赐"
+  - "title": "$寒悠悠星赐"
+    "icon": "tex_icon_item_gift_mat_55.png"
     "desc": "查看角色星赐"
-  - "icon": "tex_icon_itemtitle_default.png"
-    "title": "$寒悠悠定弦"
+  - "title": "$寒悠悠定弦"
+    "icon": "tex_icon_item_fengjian103.png"
     "desc": "查看角色定弦(未开发)"
-  - "icon": "tex_icon_item_temporary03.png"
-    "title": "$寒悠悠语音"
+  - "title": "$寒悠悠语音"
+    "icon": "tex_icon_item_driftbottle.png"
     "desc": "查看角色语音"
-  - "icon": "tex_icon_item_textile07.png"
-    "title": "$寒悠悠攻略"
-    "desc": "查看角色攻略(未开发)"
-  - "icon": "tex_icon_item_souvenir07.png"
-    "title": "$寒悠悠图片"
+  - "title": "$寒悠悠攻略"
+    "icon": "tex_icon_taskitem_book.png"
+    "desc": "查看角色攻略"
+  - "title": "$寒悠悠图片"
+    "icon": "tex_icon_item_souvenir07.png"
     "desc": "随机获取一张角色图片"
-  - "icon": "tex_icon_item_lens02.png"
-    "title": "$随机图片"
-    "desc": "随机获取一张角色的图片"
-  - "icon": "tex_icon_item_lens03.png"
-    "title": "$上传寒悠悠图片"
+  - "title": "$上传寒悠悠图片"
+    "icon": "tex_icon_item_lens03.png"
     "desc": "上传角色图片(引用上传)"
-  - "icon": "tex_icon_item_textile05.png"
-    "title": "$寒悠悠图片列表"
+  - "title": "$寒悠悠图片列表"
+    "icon": "tex_icon_item_textile05.png"
     "desc": "查询角色的所有图片"
-  - "icon": "tex_icon_item_woodmaterial07.png"
-    "title": "$删除寒悠悠图片2"
+  - "title": "$删除寒悠悠图片2"
+    "icon": "tex_icon_item_woodmaterial07.png"
     "desc": "从角色图片列表删除对应图片"
-  - "icon": "tex_icon_item_woodmaterial07.png"
-    "title": "~原图(引用)"
+  - "title": "~原图(引用)"
+    "icon": "tex_icon_item_woodmaterial07.png"
     "desc": "查看原图"
+  - "title": "$寒悠悠设置别名XXX"
+    "icon": "tex_herofavor_dec_upgradefx4.png"
+    "font-size": "18px"
+    "desc": "给角色取昵称(可以触发指令)"
+  - "title": "$寒悠悠删除别名XXX"
+    "icon": "tex_herofavor_dec_upgradefx5.png"
+    "desc": "删除角色昵称"
+    "font-size": "18px"
 
 - "group": "日常"
   "list":
-  - "icon": "tex_icon_item_buildtool03.png"
-    "title": "$签到"
+  - "title": "$签到"
+    "icon": "tex_icon_item_buildtool03.png"
     "desc": "每日签到并领取老婆"
-  - "icon": "tex_icon_item_skin03.png"
-    "title": "$数据"
+  - "title": "$数据"
+    "icon": "tex_icon_item_skin03.png"
     "desc": "PV数据统计"
-  - "icon": "tex_icon_item_rubbish01.png"
-    "title": "$公告"
+  - "title": "$公告"
+    "icon": "tex_icon_item_rubbish01.png"
     "desc": "查看Wiki最新公告"
-  - "icon": "tex_icon_item_rubbish01.png"
-    "title": "$日历"
+  - "title": "$日历"
+    "icon": "tex_icon_item_rubbish01.png"
     "desc": "查看卡池（如有）和活动日历"
 
 - "group": "管理功能"
   "auth": "master"
   "list":
-  - "icon": "tex_icon_item_skillup02.png"
-    "title": "$悠悠更新"
+  - "title": "$悠悠更新"
+    "icon": "tex_icon_item_skillup02.png"
     "desc": "更新悠悠助手"
-  - "icon": "tex_icon_item_skillup02.png"
-    "title": "$清除无效数据"
+  - "title": "$清除无效数据"
+    "icon": "tex_icon_item_skillup02.png"
     "desc": "清除退群成员数据、错误的签到数据等"
 
 excludeIconReg:
