--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   ],
   "scripts": {},
   "dependencies": {
+    "@lancedb/lancedb": "^0.22.0",
+    "apache-arrow": "^21.0.0",
     "axios": "1.3.4",
     "exceljs": "^4.4.0",
     "fake-useragent": "^1.0.1",
