--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "0.5.7",
   "name": "yoyo-plugin",
   "nameCH": "悠悠助手",
-  "author": "子叶",
+  "author": "悠悠助手",
   "description": "云崽QQ机器人的《蓝色星原：旅谣》插件",
   "main": "main.js",
   "type": "module",
