--- a/config/help.yaml
+++ b/config/help.yaml
@@ -17,6 +17,9 @@ helpGroup:
   - "title": "$成就图鉴"
     "desc": "查看所有成就"
     "icon": "tex_icon_item_temporary03.png"
+  - "title": "$任务道具图鉴"
+    "desc": "查看所有任务道具"
+    "icon": "tex_icon_taskitem_present01.png"
   - "title": "$料理图鉴"
     "desc": "查看所有食物"
     "icon": "tex_icon_item_meat04.png"
