--- a/config/help.yaml
+++ b/config/help.yaml
@@ -8,6 +8,9 @@ helpGroup:
   - "title": "$奇波图鉴"
     "icon": "tex_icon_taskitem_doll.png"
     "desc": "查询所有奇波图鉴"
+  - "title": "$套装图鉴"
+    "desc": "查看所有套装"
+    "icon": "tex_icon_equipment_large_suit1_4.png"
   - "title": "$装备图鉴"
     "desc": "查看所有装备"
     "icon": "tex_icon_equipment_large_suit1_8.png"
