--- a/data/hero/default.yaml
+++ b/data/hero/default.yaml
@@ -1,18 +1,3 @@
-"101004":
-  id: "101004"
-  name: 涂山芷霜
-"101010":
-  id: "101010"
-  name: 涂山小玉
-"103001":
-  id: "103001"
-  name: 潘茜
-"103002":
-  id: "103002"
-  name: 红宝石
-"112001":
-  id: "112001"
-  name: 姬瑟贝露
-"112002":
-  id: "112002"
-  name: 艾妮丝
+"101003":
+  id: "101003"
+  name: 寒悠悠
