新增悠悠帮助覆盖默认帮助，新增设置指令（强制有前缀）

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -39,3 +39,4 @@ embedding:
   apiKey: '' # 前去 https://api.bltcy.ai/ 购买api-key
   baseURL: 'https://api.bltcy.ai/v1/'
   model: 'text-embedding-3-small'
+help: false #是否使用yoyo帮助为默认帮助
