--- a/config/help.yaml
+++ b/config/help.yaml
@@ -1,94 +1,94 @@
-# 前缀使用 $ 符号
+# 前缀使用 # 符号
 helpGroup:
 - "group": "图鉴"
   "list":
-  - "title": "$角色图鉴"
+  - "title": "#角色图鉴"
     "icon": "tex_icon_hero_m_default.png"
     "desc": "查询所有角色图鉴"
-  - "title": "$奇波图鉴"
+  - "title": "#奇波图鉴"
     "icon": "tex_icon_taskitem_doll.png"
     "desc": "查询所有奇波图鉴"
-  - "title": "$套装图鉴"
+  - "title": "#套装图鉴"
     "desc": "查看所有套装"
     "icon": "tex_icon_equipment_large_suit1_4.png"
-  - "title": "$装备图鉴"
+  - "title": "#装备图鉴"
     "desc": "查看所有装备"
     "icon": "tex_icon_equipment_large_suit1_8.png"
-  - "title": "$建造图鉴"
+  - "title": "#建造图鉴"
     "desc": "查看所有建造物"
     "icon": "tex_icon_homescience_loggingstump.png"
-  - "title": "$成就图鉴"
+  - "title": "#成就图鉴"
     "desc": "查看所有成就"
     "icon": "tex_icon_item_temporary03.png"
-  - "title": "$任务道具图鉴"
+  - "title": "#任务道具图鉴"
     "desc": "查看所有任务道具"
     "icon": "tex_icon_taskitem_present01.png"
-  - "title": "$料理图鉴"
+  - "title": "#料理图鉴"
     "desc": "查看所有食物"
     "icon": "tex_icon_item_meat04.png"
 - "group": "角色"
   "list":
-  - "title": "$寒悠悠技能"
+  - "title": "#寒悠悠技能"
     "icon": "tex_icon_skill_104001_05.png"
     "desc": "查看角色技能"
-  - "title": "$寒悠悠星赐"
+  - "title": "#寒悠悠星赐"
     "icon": "tex_icon_item_gift_mat_55.png"
     "desc": "查看角色星赐"
-  - "title": "$寒悠悠定弦"
+  - "title": "#寒悠悠定弦"
     "icon": "tex_icon_item_fengjian103.png"
     "desc": "查看角色定弦(未开发)"
-  - "title": "$寒悠悠语音"
+  - "title": "#寒悠悠语音"
     "icon": "tex_icon_item_driftbottle.png"
     "desc": "查看角色语音"
-  - "title": "$寒悠悠攻略"
+  - "title": "#寒悠悠攻略"
     "icon": "tex_icon_taskitem_book.png"
     "desc": "查看角色攻略"
-  - "title": "$寒悠悠图片"
+  - "title": "#寒悠悠图片"
     "icon": "tex_icon_item_souvenir07.png"
     "desc": "随机获取一张角色图片"
-  - "title": "$上传寒悠悠图片"
+  - "title": "#上传寒悠悠图片"
     "icon": "tex_icon_item_lens03.png"
     "desc": "上传角色图片(引用上传)"
-  - "title": "$寒悠悠图片列表"
+  - "title": "#寒悠悠图片列表"
     "icon": "tex_icon_item_textile05.png"
     "desc": "查询角色的所有图片"
-  - "title": "$删除寒悠悠图片2"
+  - "title": "#删除寒悠悠图片2"
     "icon": "tex_icon_item_woodmaterial07.png"
     "desc": "从角色图片列表删除对应图片"
-  - "title": "~原图(引用)"
+  - "title": "#原图(引用)"
     "icon": "tex_icon_item_woodmaterial07.png"
     "desc": "查看原图"
-  - "title": "$寒悠悠设置别名XXX"
+  - "title": "#寒悠悠设置别名XXX"
     "icon": "tex_herofavor_dec_upgradefx4.png"
     "font-size": "18px"
     "desc": "给角色取昵称(可以触发指令)"
-  - "title": "$寒悠悠删除别名XXX"
+  - "title": "#寒悠悠删除别名XXX"
     "icon": "tex_herofavor_dec_upgradefx5.png"
     "desc": "删除角色昵称"
     "font-size": "18px"
 
 - "group": "日常"
   "list":
-  - "title": "$签到"
+  - "title": "#签到"
     "icon": "tex_icon_item_buildtool03.png"
     "desc": "每日签到并领取老婆"
-  - "title": "$数据"
+  - "title": "#数据"
     "icon": "tex_icon_item_skin03.png"
     "desc": "PV数据统计"
-  - "title": "$公告"
+  - "title": "#公告"
     "icon": "tex_icon_item_rubbish01.png"
     "desc": "查看Wiki最新公告"
-  - "title": "$日历"
+  - "title": "#日历"
     "icon": "tex_icon_item_rubbish01.png"
     "desc": "查看卡池（如有）和活动日历"
 
 - "group": "管理功能"
   "auth": "master"
   "list":
-  - "title": "$悠悠更新"
+  - "title": "#悠悠更新"
     "icon": "tex_icon_item_skillup02.png"
     "desc": "更新悠悠助手"
-  - "title": "$清除无效数据"
+  - "title": "#清除无效数据"
     "icon": "tex_icon_item_skillup02.png"
     "desc": "清除退群成员数据、错误的签到数据等"
 
