--- a/config/default.yaml
+++ b/config/default.yaml
@@ -35,4 +35,6 @@ chatLong: 50 # 对话长度
 temperature: 1.3
 apiKey: '' # 前去 https://platform.deepseek.com/ 购买api-key
 baseURL: 'https://api.deepseek.com'
-help: false #是否使用yoyo帮助为默认帮助
+
+setting:
+  help: false #是否使用yoyo帮助为默认帮助
