--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.5.8",
+  "version": "0.6.0-beta.0",
   "name": "yoyo-plugin",
   "nameCH": "悠悠助手",
   "author": "悠悠助手",
@@ -21,16 +21,27 @@
   ],
   "scripts": {},
   "dependencies": {
-    "@lancedb/lancedb": "^0.22.0",
+    "@lancedb/lancedb": "^0.22.3",
+    "@langchain/core": "^1.1.11",
+    "@langchain/openai": "^1.2.0",
     "apache-arrow": "^21.0.0",
     "axios": "1.3.4",
-    "exceljs": "^4.4.0",
     "fake-useragent": "^1.0.1",
-    "fast-csv": "^5.0.5",
+    "langchain": "^1.2.3",
+    "lowdb": "^7.0.1",
     "luaparse": "^0.3.1",
     "md5": "^2.3.0",
     "nodemw": "^0.24.1",
-    "openai": "^5.20.2",
-    "sharp": "^0.34.2"
-  }
+    "sharp": "^0.34.2",
+    "yaml": "^2.8.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZyeAlex/yoyo-plugin.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ZyeAlex/yoyo-plugin/issues"
+  },
+  "homepage": "https://github.com/ZyeAlex/yoyo-plugin#readme"
 }
