--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "luaparse": "^0.3.1",
     "md5": "^2.3.0",
     "nodemw": "^0.24.1",
+    "openai": "^6.16.0",
     "sharp": "^0.34.2",
     "yaml": "^2.8.2"
   },
