--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "version": "0.6.0-beta.2",
+  "version": "0.6.0-beta.3",
   "name": "yoyo-plugin",
-  "nameCH": "悠悠助手",
-  "author": "悠悠助手",
+  "title": "蓝色星原旅谣插件",
+  "author": "@ZyeAlex",
+  "authorLink":"https://gitee.com/yoyo-plugin",
+  "link":"https://gitee.com/yoyo-plugin/yoyo-plugin",
   "description": "云崽QQ机器人的《蓝色星原：旅谣》插件",
   "main": "main.js",
   "type": "module",
