--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.6.1-beta",
+  "version": "0.6.1-beta.1",
   "name": "yoyo-plugin",
   "title": "蓝色星原旅谣插件",
   "author": "@ZyeAlex",
