--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "version": "0.6.1-beta.1",
   "name": "yoyo-plugin",
   "title": "蓝色星原旅谣插件",
+  "group": "9701000",
+  "pluginGroup":"991709221",
   "author": "@ZyeAlex",
   "authorLink":"https://gitee.com/yoyo-plugin",
   "link":"https://gitee.com/yoyo-plugin/yoyo-plugin",
