--- a/config/default.yaml
+++ b/config/default.yaml
@@ -35,9 +35,8 @@ auditInclude:
     answer: 蓝色星原(:：)?(旅谣)?
 authLevel: 16 # 加群审核等级    低于该等级插件将不予审核，由管理员自行定夺(推荐32~48级)
 refuseLevel: 0 # 加群拒绝等级   低于该等级插件将自动拒绝 (用于过滤⭐️等级小号，推荐2~8级)
-excludeText: 
-  - 朋友推荐|进群交流|进群学习|交流学习
-  - 管理员|请同意|谢谢
+excludeText:
+  - 朋友推荐|进群交流|进群学习|交流学习|通过一下
 # 进群欢迎 group_id：0 表示所有群默认行为
 increaseInclude:
   - group_id: 123456
