fix:修复了一些BUG

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -36,7 +36,8 @@ auditInclude:
 authLevel: 16 # 加群审核等级    低于该等级插件将不予审核，由管理员自行定夺(推荐32~48级)
 refuseLevel: 0 # 加群拒绝等级   低于该等级插件将自动拒绝 (用于过滤⭐️等级小号，推荐2~8级)
 excludeText:
-  - 朋友推荐|进群交流|进群学习|交流学习|通过一下
+  - 朋友推荐|朋友邀请
+  - 进群学习|交流学习|通过一下
 # 进群欢迎 group_id：0 表示所有群默认行为
 increaseInclude:
   - group_id: 123456
